--- a/Dom.html
+++ b/Dom.html
@@ -9,11 +9,21 @@
 </head>
 
 <body>
-    <script src='dom.js'></script>
 
 
-  <h2 id='title'> Hello world </h2>
+  <h1 id='heading'> javascript is awesome! </h1>
+
+  <h1> This is another heading</h1>
+  <h1 class="headingss"> This is another heading using class dom manipulation</h1>
+  <h1 class="headingss"> This is another heading using class dom manipulation</h1>
   
+  <div class="parent">
+    <h4 class="child">java script child in heading 5.</h4>
+    <h5> this is sibling </h5>
+  </div>
+
+
+    <script src='dom.js'></script>
 </body>
 
 </html>
