dom manipulaton done

--- a/DomAdv.html
+++ b/DomAdv.html
@@ -11,6 +11,11 @@
     <div class="parent">
         <!-- //this is empty i want to add h1 tag using javascript dom -->
     </div>
+
+    <div class="eventTest">
+        <h1 id="heading1">javascript is awesome ........</h1>
+        <button id="btn">Click me</button>
+    </div>
     <script src="./DomAdv.js"></script>
 </body>
 </html>
