--- a/oopsInJs/oops2constructor.html
+++ b/oopsInJs/oops2constructor.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>moduless</title>
+    <title>oops in constructor</title>
 </head>
 <body>
-    <script type="module" src="./app.js"></script>
+    <script src="./oops2constructor.js"></script>
 </body>
 </html>
